Query Bill Detailed functionality && api route updates
